--- a/acetv/files/srv/www/acetv/index.php.j2
+++ b/acetv/files/srv/www/acetv/index.php.j2
@@ -1,6 +1,6 @@
 <?php
   $password = '{{ acetv_password }}';
-  $salt = 'random';
+  $salt = '{% for n in range(50) %}{{ ["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y","z","A","B","C","D","E","F","G","H","I","J","K","L","M","N","O","P","Q","R","S","T","U","V","W","X","Y","Z",0,1,2,3,4,5,6,7,8,9]|random }}{% endfor %}';
   $md5 = md5($password.$salt);
   @$action=$_GET['action'];
   //set_time_limit (60);
