--- a/acetv/files/srv/www/acetv/index.php.j2
+++ b/acetv/files/srv/www/acetv/index.php.j2
@@ -57,7 +57,7 @@
 ?>
 <head>
   <title>TDZ&trade; AceTV</title>
-  <link rel="icon" type="image/png" href="/favicon.jpg" />
+  <link rel="icon" type="image/png" href="/favicon.png">
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <!-- JQuery -->
