--- a/openvpn/files/etc/openvpn/client/openvpn_client.conf.j2
+++ b/openvpn/files/etc/openvpn/client/openvpn_client.conf.j2
@@ -3,6 +3,7 @@ dev tun
 tun-mtu 1500
 proto {{ openvpn_proto }}
 remote {{ openvpn_address }} {{ openvpn_port }}
+route {{ openvpn_address }} 255.255.255.255 net_gateway
 resolv-retry infinite
 nobind
 persist-key
